--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
     "dependencies": {
         "@inertiajs/inertia": "^0.8.7",
         "@inertiajs/inertia-vue": "^0.5.12",
-        "@inertiajs/progress": "^0.2.4"
+        "@inertiajs/progress": "^0.2.4",
+        "apexcharts": "^3.26.1",
+        "vue-apexcharts": "^1.6.1",
+        "vue-dropify": "^0.8.1",
+        "vue-element-loading": "^2.0.2",
+        "vue-loading-button": "^0.2.0",
+        "vue-moment": "^4.1.0",
+        "vue-sweetalert2": "^4.3.1",
+        "vue-toastification": "^1.7.11"
     }
 }
