--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vue-element-loading": "^2.0.2",
         "vue-loading-button": "^0.2.0",
         "vue-moment": "^4.1.0",
+        "vue-select2": "^0.2.6",
         "vue-sweetalert2": "^4.3.1",
         "vue-toastification": "^1.7.11"
     }
