--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
         "@inertiajs/progress": "^0.2.4",
         "apexcharts": "^3.26.1",
         "vue-apexcharts": "^1.6.1",
+        "vue-cool-select": "^3.5.2",
         "vue-dropify": "^0.8.1",
         "vue-element-loading": "^2.0.2",
         "vue-loading-button": "^0.2.0",
         "vue-moment": "^4.1.0",
         "vue-select2": "^0.2.6",
         "vue-sweetalert2": "^4.3.1",
+        "vue-taggable-select": "^1.0.1",
         "vue-toastification": "^1.7.11"
     }
 }
