--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@inertiajs/inertia-vue": "^0.5.12",
         "@inertiajs/progress": "^0.2.4",
         "apexcharts": "^3.26.1",
+        "laravel-vue-pagination": "^2.3.1",
         "vue-apexcharts": "^1.6.1",
         "vue-cool-select": "^3.5.2",
         "vue-dropify": "^0.8.1",
